--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <a href="#About">About</a>
     <!-- <a href="./contact.html">Contact</a> -->
     <a href="#Contact">Contact</a>
-    <a href="https://github.com/2701kai/multi" target="_blank"><i class="fa-brands fa-github"></i></a>
+    <a href="https://github.com/2701kai/webdev-related/" target="_blank"><i class="fa-brands fa-github"></i></a>
   </nav>
 
   <!-- HEADER -->
