--- a/index.html
+++ b/index.html
@@ -173,8 +173,7 @@
             class="fa-brands fa-codepen"></i></a>
         <a href="https://youtu.be/81HdnfSIJaY" target="_blank"><i class="fa-brands fa-youtube"></i></a>
             <!-- <a href="#" target="_blank"><i class="fa-brands fa-reddit"></i></a> -->
-        <a href="https://youtu.be/81HdnfSIJaY" target="_blank"><i class="fa-brands fa-youtube"></i></a>  
-        <a href="https://api.whatsapp.com/send?phone=491711009293&text=%20Call%20me%20anytime%20" target="_blank"><i
+        <!-- <a href="https://api.whatsapp.com/send?phone=491711009293&text=%20Call%20me%20anytime%20" target="_blank"><i -->
             class="fa-brands fa-whatsapp"></i></a>
         <a href="https://github.com/gael-src/gael-src.github.io" target="_blank"><i class="fa-solid fa-heart"></i></a>
       </nav>
