--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
     <footer id="Contact">
       <!-- <h2>Footer</h2> -->
       <nav class="nav-footer">
-        <a href="tel:+491711009293" target="_blank"><i class="fa-solid fa-phone"></i></a>
-        <a href="mailto:2701kai@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+        <!-- <a href="tel:+491711009293" target="_blank"><i class="fa-solid fa-phone"></i></a>
+        <a href="mailto:2701kai@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a> -->
         <a href="https://github.com/2701kai/multi" target="_blank"><i class="fa-brands fa-github"></i></a>
         <a href="https://stackoverflow.com/users/21734956/2-k" target="_blank"><i
             class="fa-brands fa-stack-overflow"></i></a>
@@ -173,8 +173,8 @@
             class="fa-brands fa-codepen"></i></a>
         <a href="https://youtu.be/81HdnfSIJaY" target="_blank"><i class="fa-brands fa-youtube"></i></a>
             <!-- <a href="#" target="_blank"><i class="fa-brands fa-reddit"></i></a> -->
-        <!-- <a href="https://api.whatsapp.com/send?phone=491711009293&text=%20Call%20me%20anytime%20" target="_blank"><i -->
-            class="fa-brands fa-whatsapp"></i></a>
+        <!-- <a href="https://api.whatsapp.com/send?phone=491711009293&text=%20Call%20me%20anytime%20" target="_blank"><i
+            class="fa-brands fa-whatsapp"></i></a> -->
         <a href="https://github.com/gael-src/gael-src.github.io" target="_blank"><i class="fa-solid fa-heart"></i></a>
       </nav>
     </footer>
