--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- <a href="./contact.html">Contact</a> -->
     <a href="#Contact">Contact</a>
     <!-- <a href="https://github.com/2701kai/webdev-related/" target="_blank"><i class="fa-brands fa-github"></i></a> -->
-    <a href="https://github.com/2701kai/webdev-related/"><i class="fa-brands fa-github"></i></a>
+    <a href="https://github.com/2701kai/webdev-related/" target="_top"><i class="fa-brands fa-github"></i></a>
   </nav>
 
   <!-- HEADER -->
