--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- <a href="./contact.html">Contact</a> -->
     <a href="#Contact">Contact</a>
     <!-- <a href="https://github.com/2701kai/webdev-related/" target="_blank"><i class="fa-brands fa-github"></i></a> -->
-    <a href="https://github.com/2701kai/webdev-related/" target="_top"><i class="fa-brands fa-github"></i></a>
+    <a href="https://github.com/2701kai/webdev-related/#webdev-related-our-wiki" target="_top"><i class="fa-brands fa-github"></i></a>
   </nav>
 
   <!-- HEADER -->
@@ -166,7 +166,7 @@
       <nav class="nav-footer">
         <!-- <a href="tel:+491711009293" target="_blank"><i class="fa-solid fa-phone"></i></a>
         <a href="mailto:2701kai@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a> -->
-        <a href="https://github.com/2701kai/webdev-related/" target="_top"><i class="fa-brands fa-github"></i></a><a href="https://stackoverflow.com/users/21734956/2-k" target="_blank"><i
+        <a href="https://github.com/2701kai/webdev-related/#webdev-related-our-wiki" target="_top"><i class="fa-brands fa-github"></i></a><a href="https://stackoverflow.com/users/21734956/2-k" target="_blank"><i
             class="fa-brands fa-stack-overflow"></i></a>
         <a href="https://codepen.io/2701kai/pen/zYJLeXa?editors=1111" target="_blank"><i
             class="fa-brands fa-codepen"></i></a>
