--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   <nav id=navbar class="nav-main">
     <a href="./index.html"><img src="./assets/favicon.ico" alt="Home" id="#home" /></a>
   <!--  <a href="#Preface">Preface</a> -->
-    <a href="#Portfolio">Playlists</a>
+    <a href="#Portfolio">so-what</a>
     <!-- <a href="#Testimonials">Testimonials</a> -->
-    <a href="#About">About</a>
+    <a href="#About">Playlists</a>
     <!-- <a href="./contact.html">Contact</a> -->
     <a href="#Contact">Contact</a>
     <!-- <a href="https://github.com/2701kai/webdev-related/" target="_blank"><i class="fa-brands fa-github"></i></a> -->
