--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <nav id=navbar class="nav-main">
     <a href="./index.html"><img src="./assets/favicon.ico" alt="Home" id="#home" /></a>
   <!--  <a href="#Preface">Preface</a> -->
-    <a href="#Portfolio">so-what</a>
+    <a href="#Portfolio">SoWhat</a>
     <!-- <a href="#Testimonials">Testimonials</a> -->
     <a href="#About">Playlists</a>
     <!-- <a href="./contact.html">Contact</a> -->
