--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <section id="About" class="about"></section>
 
       <div class="fullsize">
-        <h2>ABOUT</h2>
+        <h2>PLAYLISTS</h2>
 
 
 
