--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <div class="about-flex-child">
             <p>I didn't want to bore you with my private life...</p>
             <p>but if it really interests you:</p>
-            <p><a class="button button1" href="./pages/more-about/index.html">Peep here</a></p>
+            <p><a class="button button1" href="https://www.youtube.com/watch?v=PkZNo7MFNFg&list=PLt61lL9Np0FndZt5BKxCBRNBAZ7eVyr9z" target="_blank">.js</a></p>
             <a href=""></a>
           </div>
         </div>
