--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="about-flex-parent p-white">
           <div>
             <!-- <div class="pic"> -->
-            <img class="about-flex-child pic" src="./assets/matrix.jpg" alt=""">
+            <img class="about-flex-child pic" src="./assets/PEBKAC.jpg" alt="">
             <!-- </div> -->
           </div>
           <div class="about-flex-child">
