--- a/index.html
+++ b/index.html
@@ -134,13 +134,17 @@
       <section id="About" class="about"></section>
 
       <div class="fullsize">
-        
+
         <h2>PLAYLISTS</h2>
 
         <h2>CSS</h2>
 
       <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLt61lL9Np0Fl0Nmi7RNFoQuTXIpnlAaZq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+      <p><img src="./assets/kevin-powell.png" alt="Kevin Powell" /></p>
+      <h2 id="kevin-powell-on-youtube">
+        <a href="https://www.youtube.com/@KevinPowell">Kevin Powell on YouTube</a>
+      </h2>
 
         <h3></h3>
 
