--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!--  <a href="#Preface">Preface</a> -->
     <a href="#Portfolio">SoWhat</a>
     <!-- <a href="#Testimonials">Testimonials</a> -->
-    <a href="#About">Playlists</a>
+    <a href="#Playlists">Playlists</a>
     <!-- <a href="./contact.html">Contact</a> -->
     <a href="#Contact">Contact</a>
     <!-- <a href="https://github.com/2701kai/webdev-related/" target="_blank"><i class="fa-brands fa-github"></i></a> -->
@@ -128,10 +128,10 @@
 
 
       <!-- ---------------------------------------------------------------------- -->
-      <!-- ABOUT -->
+      <!-- PLAYLISTS -->
       <!-- ---------------------------------------------------------------------- -->
 
-      <section id="About" class="about"></section>
+      <section id="Playlists" class="about"></section>
 
       <div class="fullsize">
 
