--- a/index.html
+++ b/index.html
@@ -1,49 +1,59 @@
 <!DOCTYPE html>
-<!-- <html lang="en"> -->
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- RESET CSS: -->
+    <!-- <link rel="stylesheet" href="./css/reset.css" /> -->
+    <!-- MY CSS -->
+    <link rel="stylesheet" href="./style.css" />
+    <!-- <link rel="stylesheet" href="./style.min.css" /> -->
+    <link rel="icon" href="./assets/favicon.ico" sizes="192x192" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Montserrat:wght@100;400;700&family=Poppins:wght@100;300;700&family=Roboto+Slab:wght@100;400;700&family=Roboto:wght@100;400;700&family=Source+Code+Pro:wght@200;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- FONT AWESOME -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- RESET CSS: -->
-  <!-- <link rel="stylesheet" href="./css/reset.css" /> -->
-  <!-- MY CSS -->
-  <link rel="stylesheet" href="./style.css" />
-  <!-- <link rel="stylesheet" href="./style.min.css" /> -->
-  <link rel="icon" href="./assets/favicon.ico" sizes="192x192" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Montserrat:wght@100;400;700&family=Poppins:wght@100;300;700&family=Roboto+Slab:wght@100;400;700&family=Roboto:wght@100;400;700&family=Source+Code+Pro:wght@200;400;700&display=swap"
-    rel="stylesheet" />
-  <!-- FONT AWESOME -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>lost in code?</title>
+  </head>
 
-  <title>lost in code?</title>
-</head>
+  <body>
+    <!-- NAVIGATION MAIN   -->
+    <nav id="navbar" class="nav-main">
+      <a href="./index.html"
+        ><img src="./assets/favicon.ico" alt="Home" id="#home"
+      /></a>
+      <!--  <a href="#Preface">Preface</a> -->
+      <a href="#Portfolio">SoWhat</a>
+      <!-- <a href="#Testimonials">Testimonials</a> -->
+      <a href="#Playlists">Playlists</a>
+      <!-- <a href="./contact.html">Contact</a> -->
+      <a href="#Contact">Contact</a>
+      <!-- <a href="https://github.com/2701kai/webdev-related/" target="_blank"><i class="fa-brands fa-github"></i></a> -->
+      <a
+        href="https://github.com/2701kai/webdev-related/#webdev-related-our-wiki"
+        target="_top"
+        ><i class="fa-brands fa-github"></i
+      ></a>
+    </nav>
 
-<body>
-  <!-- NAVIGATION MAIN   -->
-  <nav id=navbar class="nav-main">
-    <a href="./index.html"><img src="./assets/favicon.ico" alt="Home" id="#home" /></a>
-  <!--  <a href="#Preface">Preface</a> -->
-    <a href="#Portfolio">SoWhat</a>
-    <!-- <a href="#Testimonials">Testimonials</a> -->
-    <a href="#Playlists">Playlists</a>
-    <!-- <a href="./contact.html">Contact</a> -->
-    <a href="#Contact">Contact</a>
-    <!-- <a href="https://github.com/2701kai/webdev-related/" target="_blank"><i class="fa-brands fa-github"></i></a> -->
-    <a href="https://github.com/2701kai/webdev-related/#webdev-related-our-wiki" target="_top"><i class="fa-brands fa-github"></i></a>
-  </nav>
+    <!-- HEADER -->
+    <header class="main-header parallax">
+      <h1>Lost in Code?</h1>
+    </header>
 
-  <!-- HEADER -->
-  <header class="main-header parallax">
-    <h1>Lost in Code?</h1>
-  </header>
-
-  <!-- PREFACE 
+    <!-- PREFACE 
   <div id="Preface" class="preface fullsize">
     <h2>preface</h2>
     <div class="container-100">
@@ -94,7 +104,6 @@
 
   -->
 
-
     <!-- ---------------------------------------------------------------------- -->
     <!-- PORTFOLIO -->
     <!-- ---------------------------------------------------------------------- -->
@@ -107,25 +116,28 @@
         </div>
       </section>
 
-
       <section class="portfolio diagonal">
         <div class="wrapper">
           <h3>We all are.</h3>
-          <p class="p-white">Maybe that'll help: Check out some of my favourite playlists concerning code.</p>
+          <p class="p-white">
+            Maybe that'll help: Check out some of my favourite playlists
+            concerning code.
+          </p>
           <p class="p-white">Yet to be continued..</p>
-
-
         </div>
       </section>
 
       <section class="portfolio">
         <div class="wrapper">
           <h3 class="section-title">Moin</h3>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio iste praesentium similique at enim quibusdam
-            unde voluptas tempora deserunt, aliquid tenetur mollitia a aspernatur ex illo alias error fuga eos!</p>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio iste
+            praesentium similique at enim quibusdam unde voluptas tempora
+            deserunt, aliquid tenetur mollitia a aspernatur ex illo alias error
+            fuga eos!
+          </p>
         </div>
       </section>
-
 
       <!-- ---------------------------------------------------------------------- -->
       <!-- PLAYLISTS -->
@@ -134,34 +146,53 @@
       <section id="Playlists" class="about"></section>
 
       <div class="fullsize">
-
         <h2>PLAYLISTS</h2>
 
         <h2>CSS</h2>
 
-      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLt61lL9Np0Fl0Nmi7RNFoQuTXIpnlAaZq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube-nocookie.com/embed/videoseries?list=PLt61lL9Np0Fl0Nmi7RNFoQuTXIpnlAaZq"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
 
-      <p><img src="./assets/kevin-powell.png" alt="Kevin Powell" /></p>
-      <!-- <h2 id="kevin-powell-on-youtube"> -->
+        <p><img src="./assets/kevin-powell.png" alt="Kevin Powell" /></p>
+        <!-- <h2 id="kevin-powell-on-youtube"> -->
         <h2>
-        <a href="https://www.youtube.com/@KevinPowell">Kevin Powell on YouTube</a>
-      </h2>
+          <a href="https://www.youtube.com/@KevinPowell"
+            >Kevin Powell on YouTube</a
+          >
+        </h2>
 
         <h3></h3>
 
         <div class="about-flex-parent p-white">
           <div>
             <!-- <div class="pic"> -->
-            <img class="about-flex-child pic" src="./assets/PEBKAC.jpg" alt="">
+            <img
+              class="about-flex-child pic"
+              src="./assets/PEBKAC.jpg"
+              alt=""
+            />
             <!-- </div> -->
           </div>
           <div class="about-flex-child">
             <p>JavaScript</p>
-            <p><a class="button button1" href="https://www.youtube.com/watch?v=PkZNo7MFNFg&list=PLt61lL9Np0FndZt5BKxCBRNBAZ7eVyr9z" target="_blank">.js</a></p>
+            <p>
+              <a
+                class="button button1"
+                href="https://www.youtube.com/watch?v=PkZNo7MFNFg&list=PLt61lL9Np0FndZt5BKxCBRNBAZ7eVyr9z"
+                target="_blank"
+                >.js</a
+              >
+            </p>
             <a href=""></a>
           </div>
         </div>
-
       </div>
     </section>
 
@@ -174,19 +205,30 @@
       <nav class="nav-footer">
         <!-- <a href="tel:+491711009293" target="_blank"><i class="fa-solid fa-phone"></i></a>
         <a href="mailto:2701kai@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a> -->
-        <a href="https://github.com/2701kai/webdev-related/#webdev-related-our-wiki" target="_top"><i class="fa-brands fa-github"></i></a><a href="https://stackoverflow.com/users/21734956/2-k" target="_blank"><i
-            class="fa-brands fa-stack-overflow"></i></a>
-        <a href="https://codepen.io/2701kai/pen/zYJLeXa?editors=1111" target="_blank"><i
-            class="fa-brands fa-codepen"></i></a>
-        <a href="https://youtu.be/81HdnfSIJaY" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-            <!-- <a href="#" target="_blank"><i class="fa-brands fa-reddit"></i></a> -->
+        <a
+          href="https://github.com/2701kai/webdev-related/#webdev-related-our-wiki"
+          target="_top"
+          ><i class="fa-brands fa-github"></i></a
+        ><a href="https://stackoverflow.com/users/21734956/2-k" target="_blank"
+          ><i class="fa-brands fa-stack-overflow"></i
+        ></a>
+        <a
+          href="https://codepen.io/2701kai/pen/zYJLeXa?editors=1111"
+          target="_blank"
+          ><i class="fa-brands fa-codepen"></i
+        ></a>
+        <a href="https://youtu.be/81HdnfSIJaY" target="_blank"
+          ><i class="fa-brands fa-youtube"></i
+        ></a>
+        <!-- <a href="#" target="_blank"><i class="fa-brands fa-reddit"></i></a> -->
         <!-- <a href="https://api.whatsapp.com/send?phone=491711009293&text=%20Call%20me%20anytime%20" target="_blank"><i
             class="fa-brands fa-whatsapp"></i></a> -->
-        <a href="https://github.com/gael-src/gael-src.github.io" target="_blank"><i class="fa-solid fa-heart"></i></a>
+        <a href="https://github.com/gael-src/gael-src.github.io" target="_blank"
+          ><i class="fa-solid fa-heart"></i
+        ></a>
       </nav>
     </footer>
 
     <script src="main.js"></script>
-</body>
-
+  </body>
 </html>
