--- a/index.html
+++ b/index.html
@@ -160,7 +160,11 @@
           allowfullscreen
         ></iframe>
 
-        <p><img src="./assets/kevin-powell.png" alt="Kevin Powell" /></p>
+        <p>
+          <a href="https://www.youtube.com/@KevinPowell"
+            ><img src="./assets/kevin-powell.png" alt="Kevin Powell"
+          /></a>
+        </p>
         <!-- <h2 id="kevin-powell-on-youtube"> -->
         <h2>
           <a href="https://www.youtube.com/@KevinPowell"
