--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
           >
         </h2>
 
+        <!-- ---------------------------------------------------------------------- -->
+        <!-- HSL -->
+        <!-- ---------------------------------------------------------------------- -->
+
         <!-- HSL
         aus: https://developer.mozilla.org/en-US/docs/Web/CSS/color_value/hsl
         funktioniert nicht.. -->
