--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
         <p>
           <a href="https://www.youtube.com/@KevinPowell"
-            ><img src="./assets/kevin-powell.png" alt="Kevin Powell"
+            ><img src="./assets/kevin-powell.png" alt="Kevin Powell" class="img-250"
           /></a>
         </p>
 
